# book-of-hexxy

./: .copier-answers.hexdoc-hexcasting.yml  README.md  gradle.properties  hexdoc.toml  nodemon.json  pyproject.toml
.github/workflows/: build_docs.yml
docs/: index.html
docs/meta/: sitemap-minecraft.json  sitemap.json
docs/v/1.19.2/: index.html
docs/v/1.19.2/1.0.0/en_us/: .sitemap-marker.json  index.html  index.js
docs/v/1.19.2/1.0.0/en_us/basics/: index.html
docs/v/1.19.2/1.0.0/en_us/basics/couldnt_cast/: index.html
docs/v/1.19.2/1.0.0/en_us/basics/geodes/: index.html
docs/v/1.19.2/1.0.0/en_us/basics/gloopytweaks/: index.html
docs/v/1.19.2/1.0.0/en_us/basics/media/: index.html
docs/v/1.19.2/1.0.0/en_us/basics/slipway_hint/: index.html
docs/v/1.19.2/1.0.0/en_us/basics/start_to_see/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/101/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/influences/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/mishaps/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/mishaps2/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/naming/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/stack/: index.html
docs/v/1.19.2/1.0.0/en_us/casting/vectors/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/accelerator/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/akashiclib/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/brainsweeping/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/coping_saw/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/directrix/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/impetus/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/item_flaying/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/library_card/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/loci/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/noosphere_main/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/noosphere_materials/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/sentinel_detection/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/spellcircles/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/super_budding/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/syncetrix/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/the_work/: index.html
docs/v/1.19.2/1.0.0/en_us/greatwork/undulator/: index.html
docs/v/1.19.2/1.0.0/en_us/interop/: index.html
docs/v/1.19.2/1.0.0/en_us/interop/addons/: index.html
docs/v/1.19.2/1.0.0/en_us/interop/gravity/: index.html
docs/v/1.19.2/1.0.0/en_us/interop/interop/: index.html
docs/v/1.19.2/1.0.0/en_us/interop/pehkui/: index.html
docs/v/1.19.2/1.0.0/en_us/items/: index.html
docs/v/1.19.2/1.0.0/en_us/items/abacus/: index.html
docs/v/1.19.2/1.0.0/en_us/items/amethyst/: index.html
docs/v/1.19.2/1.0.0/en_us/items/casters_coin/: index.html
docs/v/1.19.2/1.0.0/en_us/items/casting_frog/: index.html
docs/v/1.19.2/1.0.0/en_us/items/casting_potion/: index.html
docs/v/1.19.2/1.0.0/en_us/items/casting_ring/: index.html
docs/v/1.19.2/1.0.0/en_us/items/chests/: index.html
docs/v/1.19.2/1.0.0/en_us/items/decoration/: index.html
docs/v/1.19.2/1.0.0/en_us/items/dyebook/: index.html
docs/v/1.19.2/1.0.0/en_us/items/edified/: index.html
docs/v/1.19.2/1.0.0/en_us/items/essence_stone/: index.html
docs/v/1.19.2/1.0.0/en_us/items/fidgets/: index.html
docs/v/1.19.2/1.0.0/en_us/items/focus/: index.html
docs/v/1.19.2/1.0.0/en_us/items/gloop/: index.html
docs/v/1.19.2/1.0.0/en_us/items/gloop_dye/: index.html
docs/v/1.19.2/1.0.0/en_us/lore/: index.html
docs/v/1.19.2/1.0.0/en_us/patterns/: index.html
docs/v/1.19.2/1.0.0/ru_ru/: .sitemap-marker.json  index.html  index.js
docs/v/1.19.2/1.0.0/ru_ru/basics/: index.html
docs/v/1.19.2/1.0.0/ru_ru/casting/: index.html
docs/v/1.19.2/1.0.0/ru_ru/greatwork/: index.html
docs/v/1.19.2/1.0.0/ru_ru/interop/: index.html
docs/v/1.19.2/1.0.0/ru_ru/items/: index.html
docs/v/1.19.2/1.0.0/ru_ru/lore/: index.html
docs/v/1.19.2/1.0.0/ru_ru/patterns/: index.html
docs/v/1.19.2/1.0.0/zh_cn/: .sitemap-marker.json  index.html  index.js
docs/v/1.19.2/1.0.0/zh_cn/basics/: index.html
docs/v/1.19.2/1.0.0/zh_cn/casting/: index.html
docs/v/1.19.2/1.0.0/zh_cn/greatwork/: index.html
docs/v/1.19.2/1.0.0/zh_cn/interop/: index.html
docs/v/1.19.2/1.0.0/zh_cn/items/: index.html
docs/v/1.19.2/1.0.0/zh_cn/lore/: index.html
docs/v/1.19.2/1.0.0/zh_cn/patterns/: index.html
docs/v/1.19.2/ru_ru/: index.html
docs/v/1.19.2/zh_cn/: index.html
docs/v/latest/main/en_us/: .sitemap-marker.json  index.css  index.html  index.js
docs/v/latest/main/en_us/basics/: index.html
docs/v/latest/main/en_us/casting/: index.html
docs/v/latest/main/en_us/greatwork/: index.html
docs/v/latest/main/en_us/interop/: index.html
docs/v/latest/main/en_us/items/: index.html
docs/v/latest/main/en_us/lore/: index.html
docs/v/latest/main/en_us/patterns/: index.html
docs/v/latest/main/ru_ru/: .sitemap-marker.json  index.html  index.js
docs/v/latest/main/ru_ru/basics/: index.html
docs/v/latest/main/ru_ru/casting/: index.html
docs/v/latest/main/ru_ru/greatwork/: index.html
docs/v/latest/main/ru_ru/interop/: index.html
docs/v/latest/main/ru_ru/items/: index.html
docs/v/latest/main/ru_ru/lore/: index.html
docs/v/latest/main/ru_ru/patterns/: index.html
docs/v/latest/main/zh_cn/: .sitemap-marker.json  index.css  index.html  index.js
docs/v/latest/main/zh_cn/basics/: index.html
docs/v/latest/main/zh_cn/casting/: index.html
docs/v/latest/main/zh_cn/greatwork/: index.html
docs/v/latest/main/zh_cn/interop/: index.html
docs/v/latest/main/zh_cn/items/: index.html
docs/v/latest/main/zh_cn/lore/: index.html
docs/v/latest/main/zh_cn/patterns/: index.html
resources/assets/hexcasting/lang/: en_us.flatten.json5
resources/data/hexdoc/tags/advancements/: spoilered.json
src/hexdoc_hexxybook/: _hooks.py  source_books.py
src/hexdoc_hexxybook/_templates/: index.css.jinja
src/hexdoc_hexxybook/_templates/components/: welcome.html.jinja
(+2333 files in other folders)
