[build-system]
requires = [
    "hatchling",
    "hatch-gradle-version>=0.8.0",
]
build-backend = "hatchling.build"

# project metadata

[project]
name = "hexdoc-hexxybook"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "Python web book docgen and hexdoc plugin for the Book of Hexxy."
readme = "README.md"
authors = [
    { name="object-Object" },
]
keywords = ["hexdoc"]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://book.hexxy.media"
Source = "https://github.com/hexdoc-dev/book-of-hexxy"

# Gradle version/deps

[tool.hatch.version]
scheme = "gradle"
source = "gradle-properties"
py-path = "src/hexdoc_hexxybook/__version__.py"
key = "minecraftVersion"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.metadata.hooks.gradle-properties]
dependencies = [
    "hexdoc~=1!0.1.0a10.dev",
    { package="hexdoc-hexcasting", op="~=", py-version="1.0.dev22", key="hexcastingVersion" },
]

[tool.hatch.metadata.hooks.gradle-properties.optional-dependencies]
dev = [
    "ruff~=0.1.11",
]

# directory inclusion

[tool.hatch.build]
artifacts = [
    "/src/hexdoc_hexxybook/_export/generated",
    "/src/hexdoc_hexxybook/__gradle_version__.py",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/hexdoc_hexxybook",
]

# hexdoc entry points

[project.entry-points.hexdoc]
hexxybook = "hexdoc_hexxybook._hooks:HexxyBookPlugin"

# linting

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = ["src"]
exclude = ["venv"]

typeCheckingMode = "basic"

strictDictionaryInference = true
strictListInference = true
strictSetInference = true

reportAssertAlwaysTrue = "error"
reportConstantRedefinition = "error"
reportDeprecated = "error"
reportDuplicateImport = "error"
reportFunctionMemberAccess = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportIncompleteStub = "error"
reportInconsistentConstructor = "error"
reportInvalidStringEscapeSequence = "error"
reportInvalidStubStatement = "error"
reportInvalidTypeVarUse = "error"
reportMatchNotExhaustive = "error"
reportMissingParameterType = "error"
reportMissingTypeStubs = "error"
reportOverlappingOverload = "error"
reportSelfClsParameterName = "error"
reportTypeCommentUsage = "error"
reportUnknownParameterType = "error"
reportUnnecessaryCast = "error"
reportUnnecessaryContains = "error"
reportUnsupportedDunderAll = "error"
reportUntypedBaseClass = "error"
reportUntypedClassDecorator = "error"
reportUntypedFunctionDecorator = "error"
reportUntypedNamedTuple = "error"
reportWildcardImportFromLibrary = "error"

reportMissingTypeArgument = "warning"
reportPrivateUsage = "warning"
reportUnknownArgumentType = "warning"
reportUnknownLambdaType = "warning"
reportUnknownMemberType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryComparison = "warning"
reportUnnecessaryIsInstance = "warning"
reportUnusedClass = "warning"
reportUnusedExpression = "warning"
reportUnusedFunction = "warning"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
